infras/vpc.tf
resource "aws_vpc" "three-tier-vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = var.vpc_name
  }
}
